--- a/Llama3GRPO_edits.ipynb
+++ b/Llama3GRPO_edits.ipynb
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-27 15:03:56,441\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2025-02-27 15:14:59,302\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 02-27 15:04:03 __init__.py:207] Automatically detected platform cuda.\n",
+      "INFO 02-27 15:15:01 __init__.py:207] Automatically detected platform cuda.\n",
       "==((====))==  Unsloth 2025.2.15: Fast Qwen2 patching. Transformers: 4.49.0.\n",
       "   \\\\   /|    GPU: NVIDIA RTX A6000. Max memory: 47.536 GB. Platform: Linux.\n",
       "O^O/ \\_/ \\    Torch: 2.5.1+cu124. CUDA: 8.6. CUDA Toolkit: 12.4. Triton: 3.1.0\n",
@@ -171,24 +171,24 @@
       "Unsloth: Your GPU has CUDA compute capability 8.6 with VRAM = 47.54 GB.\n",
       "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 2048. Num Sequences = 288.\n",
       "Unsloth: vLLM's KV Cache can use up to 22.96 GB. Also swap space = 6 GB.\n",
-      "INFO 02-27 15:04:10 config.py:549] This model supports multiple tasks: {'score', 'reward', 'classify', 'generate', 'embed'}. Defaulting to 'generate'.\n",
-      "INFO 02-27 15:04:10 llm_engine.py:234] Initializing a V0 LLM engine (v0.7.3) with config: model='kings-crown/Isabelle_FVELer_SFT', speculative_config=None, tokenizer='kings-crown/Isabelle_FVELer_SFT', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=2048, download_dir=None, load_format=LoadFormat.AUTO, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=None, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=kings-crown/Isabelle_FVELer_SFT, num_scheduler_steps=1, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":288}, use_cached_outputs=False, \n",
-      "INFO 02-27 15:04:10 cuda.py:229] Using Flash Attention backend.\n",
-      "INFO 02-27 15:04:11 model_runner.py:1110] Starting to load model kings-crown/Isabelle_FVELer_SFT...\n"
+      "INFO 02-27 15:15:08 config.py:549] This model supports multiple tasks: {'embed', 'generate', 'classify', 'score', 'reward'}. Defaulting to 'generate'.\n",
+      "INFO 02-27 15:15:08 llm_engine.py:234] Initializing a V0 LLM engine (v0.7.3) with config: model='kings-crown/Isabelle_FVELer_SFT', speculative_config=None, tokenizer='kings-crown/Isabelle_FVELer_SFT', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=2048, download_dir=None, load_format=LoadFormat.AUTO, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=None, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=kings-crown/Isabelle_FVELer_SFT, num_scheduler_steps=1, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":288}, use_cached_outputs=False, \n",
+      "INFO 02-27 15:15:09 cuda.py:229] Using Flash Attention backend.\n",
+      "INFO 02-27 15:15:09 model_runner.py:1110] Starting to load model kings-crown/Isabelle_FVELer_SFT...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[W227 15:04:11.777014621 CUDAAllocatorConfig.h:28] Warning: expandable_segments not supported on this platform (function operator())\n"
+      "[W227 15:15:09.251853372 CUDAAllocatorConfig.h:28] Warning: expandable_segments not supported on this platform (function operator())\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 02-27 15:04:11 weight_utils.py:254] Using model weights format ['*.safetensors']\n"
+      "INFO 02-27 15:15:09 weight_utils.py:254] Using model weights format ['*.safetensors']\n"
      ]
     },
     {
@@ -196,11 +196,11 @@
      "output_type": "stream",
      "text": [
       "Loading safetensors checkpoint shards:   0% Completed | 0/4 [00:00<?, ?it/s]\n",
-      "Loading safetensors checkpoint shards:  25% Completed | 1/4 [00:00<00:01,  2.36it/s]\n",
-      "Loading safetensors checkpoint shards:  50% Completed | 2/4 [00:00<00:00,  3.26it/s]\n",
-      "Loading safetensors checkpoint shards:  75% Completed | 3/4 [00:01<00:00,  2.52it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:01<00:00,  2.07it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:01<00:00,  2.26it/s]\n",
+      "Loading safetensors checkpoint shards:  25% Completed | 1/4 [00:00<00:01,  2.13it/s]\n",
+      "Loading safetensors checkpoint shards:  50% Completed | 2/4 [00:00<00:00,  3.02it/s]\n",
+      "Loading safetensors checkpoint shards:  75% Completed | 3/4 [00:01<00:00,  2.34it/s]\n",
+      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:01<00:00,  1.99it/s]\n",
+      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:01<00:00,  2.14it/s]\n",
       "\n"
      ]
     },
@@ -208,29 +208,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 02-27 15:04:13 model_runner.py:1115] Loading model weights took 14.3854 GB\n",
-      "INFO 02-27 15:04:13 punica_selector.py:18] Using PunicaWrapperGPU.\n",
-      "INFO 02-27 15:04:15 worker.py:267] Memory profiling takes 1.34 seconds\n",
-      "INFO 02-27 15:04:15 worker.py:267] the current vLLM instance can use total_gpu_memory (47.54GiB) x gpu_memory_utilization (0.79) = 37.74GiB\n",
-      "INFO 02-27 15:04:15 worker.py:267] model weights take 14.39GiB; non_torch_memory takes 0.06GiB; PyTorch activation peak memory takes 1.58GiB; the rest of the memory reserved for KV Cache is 21.72GiB.\n",
-      "INFO 02-27 15:04:15 executor_base.py:111] # cuda blocks: 25420, # CPU blocks: 7021\n",
-      "INFO 02-27 15:04:15 executor_base.py:116] Maximum concurrency for 2048 tokens per request: 198.59x\n",
-      "INFO 02-27 15:04:20 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
+      "INFO 02-27 15:15:12 model_runner.py:1115] Loading model weights took 14.3854 GB\n",
+      "INFO 02-27 15:15:12 punica_selector.py:18] Using PunicaWrapperGPU.\n",
+      "INFO 02-27 15:15:13 worker.py:267] Memory profiling takes 1.44 seconds\n",
+      "INFO 02-27 15:15:13 worker.py:267] the current vLLM instance can use total_gpu_memory (47.54GiB) x gpu_memory_utilization (0.79) = 37.74GiB\n",
+      "INFO 02-27 15:15:13 worker.py:267] model weights take 14.39GiB; non_torch_memory takes 0.06GiB; PyTorch activation peak memory takes 1.58GiB; the rest of the memory reserved for KV Cache is 21.72GiB.\n",
+      "INFO 02-27 15:15:14 executor_base.py:111] # cuda blocks: 25420, # CPU blocks: 7021\n",
+      "INFO 02-27 15:15:14 executor_base.py:116] Maximum concurrency for 2048 tokens per request: 198.59x\n",
+      "INFO 02-27 15:15:18 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Capturing CUDA graph shapes: 100%|██████████| 39/39 [00:26<00:00,  1.48it/s]"
+      "Capturing CUDA graph shapes: 100%|██████████| 39/39 [00:25<00:00,  1.52it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 02-27 15:04:46 model_runner.py:1562] Graph capturing finished in 26 secs, took 2.12 GiB\n",
-      "INFO 02-27 15:04:46 llm_engine.py:436] init engine (profile, create kv cache, warmup model) took 33.03 seconds\n"
+      "INFO 02-27 15:15:44 model_runner.py:1562] Graph capturing finished in 26 secs, took 2.12 GiB\n",
+      "INFO 02-27 15:15:44 llm_engine.py:436] init engine (profile, create kv cache, warmup model) took 31.88 seconds\n"
      ]
     },
     {
@@ -470,19 +470,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "cXk993X6C2ZZ"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 1138/1138 [00:00<00:00, 9890.36 examples/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import sys\n",
@@ -572,7 +564,7 @@
     "    q = prompts[0][-1]['content']\n",
     "    extracted_snippets = [extract_isabelle_snippet(r) for r in responses]\n",
     "\n",
-    "    print('-'*20, f\"Question:\\n{q}\", f\"\\nAnswer:\\n{answer[0]}\", f\"\\nResponse:\\n{responses[0]}\", f\"\\nExtracted:\\n{extracted_snippets[0]}\")\n",
+    "    #print('-'*20, f\"Question:\\n{q}\", f\"\\nAnswer:\\n{answer[0]}\", f\"\\nResponse:\\n{responses[0]}\", f\"\\nExtracted:\\n{extracted_snippets[0]}\")\n",
     "\n",
     "    for content in extracted_snippets:\n",
     "        checker = Checker(\n",
@@ -585,24 +577,28 @@
     "        rewards = [2.0 if checker.check(content).get(\"success\", False) else 0.0 for content in extracted_snippets]\n",
     "    return rewards\n",
     "\n",
+    "\"\"\"\"\n",
     "def int_reward_func(completions, **kwargs) -> list[float]:\n",
     "    responses = [completion[0]['content'] for completion in completions]\n",
     "    extracted_responses = [extract_xml_answer(r) for r in responses]\n",
     "    return [0.5 if r.isdigit() else 0.0 for r in extracted_responses]\n",
+    "No numbers in the output to check\n",
+    "\"\"\"\n",
+    "\n",
     "\n",
     "def strict_format_reward_func(completions, **kwargs) -> list[float]:\n",
     "    \"\"\"Reward function that checks if the completion has a specific format.\"\"\"\n",
     "    pattern = r\"^<reasoning>\\n.*?\\n</reasoning>\\n<answer>\\n.*?\\n</answer>\\n$\"\n",
     "    responses = [completion[0][\"content\"] for completion in completions]\n",
     "    matches = [re.match(pattern, r) for r in responses]\n",
-    "    return [0.5 if match else 0.0 for match in matches]\n",
+    "    return [0.25 if match else 0.0 for match in matches]\n",
     "\n",
     "def soft_format_reward_func(completions, **kwargs) -> list[float]:\n",
     "    \"\"\"Reward function that checks if the completion has a specific format.\"\"\"\n",
     "    pattern = r\"<reasoning>.*?</reasoning>\\s*<answer>.*?</answer>\"\n",
     "    responses = [completion[0][\"content\"] for completion in completions]\n",
     "    matches = [re.match(pattern, r) for r in responses]\n",
-    "    return [0.5 if match else 0.0 for match in matches]\n",
+    "    return [0.25 if match else 0.0 for match in matches]\n",
     "\n",
     "def count_xml(text) -> float:\n",
     "    count = 0.0\n",
@@ -625,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +636,7 @@
        " 'answer': 'lemma eq:\\n  assumes \"S \\\\<subseteq> T\"\\n    and \"\\\\<exists>x. S = {x}\"\\n    and \"\\\\<exists>y. T = {y}\"\\n  shows \"S = T\"\\nproof -\\n  from `\\\\<exists>x. S = {x}` obtain x where \"S = {x}\" by auto\\n  from `\\\\<exists>y. T = {y}` obtain y where \"T = {y}\" by auto\\n  have \"x \\\\<in> T\" using `S \\\\<subseteq> T` `S = {x}` by auto\\n  then have \"x = y\" using `T = {y}` by auto\\n  then have \"S = T\" using `S = {x}` `T = {y}` by simp\\n  thus ?thesis by simp\\nqed'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -737,7 +733,82 @@
     "id": "vzOuSVCL_GA9",
     "outputId": "a71824d4-afd8-47ac-f0ea-eae276927e19"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
+      "   \\\\   /|    Num examples = 1,138 | Num Epochs = 2\n",
+      "O^O/ \\_/ \\    Batch size per device = 6 | Gradient Accumulation steps = 4\n",
+      "\\        /    Total batch size = 24 | Total steps = 500\n",
+      " \"-____-\"     Number of trainable parameters = 161,480,704\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mbalaji-vir1997\u001b[0m (\u001b[33mbalaji-vir1997-stevens-institute-of-technology\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.19.7"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/siai/Documents/GitHub/NeSy_Policy_Reasoning/wandb/run-20250227_151910-v6a08xmz</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/balaji-vir1997-stevens-institute-of-technology/huggingface/runs/v6a08xmz' target=\"_blank\">output_RL</a></strong> to <a href='https://wandb.ai/balaji-vir1997-stevens-institute-of-technology/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/balaji-vir1997-stevens-institute-of-technology/huggingface' target=\"_blank\">https://wandb.ai/balaji-vir1997-stevens-institute-of-technology/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/balaji-vir1997-stevens-institute-of-technology/huggingface/runs/v6a08xmz' target=\"_blank\">https://wandb.ai/balaji-vir1997-stevens-institute-of-technology/huggingface/runs/v6a08xmz</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sys.path.append('../')\n",
     "os.environ['PISA_PATH'] = '/home/siai/Portal-to-ISAbelle/src/main/python'\n",
@@ -750,7 +821,6 @@
     "        xmlcount_reward_func,\n",
     "        soft_format_reward_func,\n",
     "        strict_format_reward_func,\n",
-    "        int_reward_func,\n",
     "        correctness_reward_func,\n",
     "        checker_reward_func,\n",
     "    ],\n",
